--- a/ReactVersion/portfolio/src/App.css
+++ b/ReactVersion/portfolio/src/App.css
@@ -28,6 +28,15 @@
   color: #61dafb;
 }
 
+.CarouselItem {
+  min-height: 80vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+ 
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
