--- a/ReactVersion/portfolio/src/App.css
+++ b/ReactVersion/portfolio/src/App.css
@@ -1,3 +1,25 @@
+.anim_gradient {
+  background: linear-gradient(132deg, olivedrab 0%, olive 100%);
+  background-Size: "400% 400%";
+  animation: "gradient 5s ease infinite";
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+;
+
 .App {
   text-align: center;
 }
