--- a/ReactVersion/src/App.css
+++ b/ReactVersion/src/App.css
@@ -1,8 +1,9 @@
 .anim_gradient {
-  background: linear-gradient(to right, olivedrab 40%, rgb(167, 93, 19) 60%, #7a5601 40%);
-  background-size: 300% 300%;
-  animation: gradient 10s ease infinite;
+  background: linear-gradient(to right, #5B6E5C, #A5A888);
+  background-size: 400% 400%;
+  animation: gradient 20s ease infinite;
 }
+
 
 .anim_gradient:hover {
   background-position: 100%;
@@ -23,19 +24,19 @@
   }
 }
 
-
-
 body {
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
 }
 
 h1,
 h2,
 h3,
 h4 {
-  font-family: 'Lobster', cursive;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 600;
 }
-
 
 #gif_game {
   size: 20rem;
@@ -46,15 +47,17 @@ h4 {
 }
 
 .row-content {
-  border: .50em ridge rgb(74, 78, 78);
+  border: 1px solid #d7d2cc;
+  padding: 1em;
+  margin-bottom: 2em;
 }
 
 .tabs {
-  background-color: #343131;
-  border: .25em solid #DDD;
-  border-top: none;
-  padding: .25em;
-  color: aliceblue;
+  background-color: #f4f4f4;
+  border: none;
+  border-radius: 4px;
+  padding: 1em;
+  color: #304352;
 }
 
 .App {
@@ -68,7 +71,7 @@ h4 {
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-float infinite 3s ease-in-out;
+    animation: App-logo-float infinite 5s ease-in-out;
   }
 }
 
@@ -78,11 +81,12 @@ h4 {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: 1.5rem;
+  background-color: #fff;
 }
 
 .App-link {
-  color: rgb(112, 76, 182);
+  color: #304352;
 }
 
 @keyframes App-logo-float {
