--- a/ReactVersion/src/index.css
+++ b/ReactVersion/src/index.css
@@ -1,14 +1,95 @@
+/* Body */
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: olivedrab;
+  font-family: "Roboto", sans-serif;
+  background-color: #f2f2f2;
 }
 
+/* Headings */
+h1,
+h2,
+h3 {
+  font-family: "Lobster", cursive;
+  text-align: center;
+  margin-top: 2rem;
+}
+
+/* Code */
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: "Fira Code", monospace;
+}
+
+/* Buttons */
+.btn {
+  display: inline-block;
+  font-weight: 400;
+  color: #212529;
+  text-align: center;
+  vertical-align: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background-color: #f8f9fa;
+  border: 1px solid #f8f9fa;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.btn:hover {
+  color: #fff;
+  background-color: #343a40;
+  border-color: #343a40;
+}
+
+/* Footer */
+footer {
+  background-color: #343a40;
+  color: #f8f9fa;
+  padding: 2rem 0;
+}
+
+footer div {
+  text-align: center;
+}
+
+/* Jumbotron */
+.jumbotron {
+  background-color: #f8f9fa;
+  color: #212529;
+  padding: 2rem;
+  margin-bottom: 2rem;
+}
+
+/* Navbar */
+.navbar {
+  background-color: #343a40;
+  color: #f8f9fa;
+}
+
+/* Carousel */
+.carousel-item {
+  height: 17rem;
+}
+
+/* Vertical Carousel */
+.vert .carousel-item-next.carousel-item-left,
+.vert .carousel-item-prev.carousel-item-right {
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+}
+
+.vert .carousel-item-next,
+.vert .active.carousel-item-right {
+  -webkit-transform: translate3d(0, 100%, 0);
+  transform: translate3d(0, 100%, 0);
+}
+
+.vert .carousel-item-prev,
+.vert .active.carousel-item-left {
+  -webkit-transform: translate3d(0, -100%, 5);
+  transform: translate3d(0, -100%, 5);
 }
