--- a/ReactVersion/src/App.css
+++ b/ReactVersion/src/App.css
@@ -55,7 +55,7 @@ h4 {
 .tabs {
   background-color: #f4f4f4;
   border: none;
-  border-radius: 4px;
+  border-radius: 0.25em;
   padding: 1em;
   color: #304352;
 }
@@ -101,10 +101,10 @@ h4 {
   }
 
   50% {
-    transform: translateY(10px);
+    transform: translateY(0.625em);
   }
 
   100% {
-    transform: translateY(0px);
+    transform: translateY(0em);
   }
 }
