--- a/ReactVersion/src/App.css
+++ b/ReactVersion/src/App.css
@@ -24,6 +24,74 @@
   }
 }
 
+.headline {
+  font-size: .85rem;
+  font-weight: 200;
+  color: whitesmoke;
+  overflow: hidden;
+  border-right: .15em solid #aeaaaa;
+  /* Creates the typing cursor effect */
+  white-space: nowrap;
+  /* Prevents the text from wrapping */
+  animation: typing 6s steps(40) infinite;
+}
+
+@keyframes typing {
+  from {
+    width: 0
+  }
+
+  to {
+    width: 100%
+  }
+}
+
+.showcase {
+  font-size: 2.5em;
+  font-weight: bold;
+  color: #8cff00;
+  text-shadow:
+    0 0 0.1em #8cff00,
+    0 0 0.2em #8cff00,
+    0 0 0.3em #8cff00,
+    0 0 0.4em #8cff00,
+    0 0 0.5em #8cff00,
+    0 0 0.6em #8cff00,
+    0 0 0.7em #8cff00,
+    0 0 0.8em #8cff00,
+    0 0 1em #8cff00;
+  animation: neon-glow 2s ease-in-out infinite alternate;
+  transform-style: preserve-3d;
+  perspective: 1000px;
+  transform: translateZ(0.5px);
+}
+
+@keyframes neon-glow {
+  from {
+    text-shadow:
+      0 0 0.5em #8cff00,
+      0 0 1em #8cff00,
+      0 0 2em #8cff00,
+      0 0 4em #8cff00,
+      0 0 8em #8cff00,
+      0 0 9em #8cff00,
+      0 0 10em #8cff00;
+  }
+
+  to {
+    text-shadow:
+      0 0 0.2em #7fff00,
+      0 0 0.4em #7fff00,
+      0 0 0.8em #7fff00,
+      0 0 1.6em #7fff00,
+      0 0 3.2em #7fff00,
+      0 0 6.4em #7fff00,
+      0 0 12.8em #7fff00,
+      0 0 25.6em #7fff00;
+  }
+}
+
+
 body {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
