--- a/ReactVersion/src/App.css
+++ b/ReactVersion/src/App.css
@@ -80,14 +80,14 @@
 
   to {
     text-shadow:
-      0 0 0.2em #7fff00,
-      0 0 0.4em #7fff00,
-      0 0 0.8em #7fff00,
-      0 0 1.6em #7fff00,
-      0 0 3.2em #7fff00,
-      0 0 6.4em #7fff00,
-      0 0 12.8em #7fff00,
-      0 0 25.6em #7fff00;
+      0 0 0.2em #7300ff,
+      0 0 0.4em #7300ff,
+      0 0 0.8em #7300ff,
+      0 0 1.6em #7300ff,
+      0 0 3.2em #7300ff,
+      0 0 6.4em #7300ff,
+      0 0 12.8em #7300ff,
+      0 0 25.6em #7300ff;
   }
 }
 
