--- a/ReactVersion/src/App.css
+++ b/ReactVersion/src/App.css
@@ -49,7 +49,7 @@
 .showcase {
   font-size: 2.5em;
   font-weight: bold;
-  color: #8cff00;
+  color: #F5D041;
   text-shadow:
     0 0 0.1em #8cff00,
     0 0 0.2em #8cff00,
@@ -114,11 +114,6 @@ h4 {
   height: 19em;
 }
 
-.row-content {
-  border: 1px solid #d7d2cc;
-  padding: 1em;
-  margin-bottom: 2em;
-}
 
 .tabs {
   background-color: #f4f4f4;
@@ -127,6 +122,15 @@ h4 {
   padding: 1em;
   color: #304352;
 }
+
+.tab-content {
+  background-color: #343131;
+  border: 1px solid #DDD;
+  border-top: none;
+  padding: 1em;
+  color: #fff;
+}
+
 
 .App {
   text-align: center;
