--- a/src/App.css
+++ b/src/App.css
@@ -105,7 +105,7 @@
 
 
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Comic Sans MS', 'Chalkboard SE', 'Comic Neue', sans-serif;
   font-size: 16px;
   line-height: 1.5;
 }
@@ -114,7 +114,7 @@ h1,
 h2,
 h3,
 h4 {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Comic Sans MS', 'Chalkboard SE', 'Comic Neue', sans-serif;
   font-weight: 600;
 }
 
