--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 /* Body */
 body {
   margin: 0;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Comic Sans MS', 'Chalkboard SE', 'Comic Neue', sans-serif;
   background-color: #f2f2f2;
 }
 
@@ -9,14 +9,14 @@ body {
 h1,
 h2,
 h3 {
-  font-family: "Lobster", cursive;
+  font-family: 'Comic Sans MS', 'Chalkboard SE', 'Comic Neue', sans-serif;
   text-align: center;
   margin-top: 2rem;
 }
 
 /* Code */
 code {
-  font-family: "Fira Code", monospace;
+  font-family: 'Comic Sans MS', 'Chalkboard SE', 'Comic Neue', sans-serif;
 }
 
 /* Buttons */
